# nmr-spectrometer

./: .gitlab-ci.yml  README.md
.workflows/: build.yml
software/spectrometer/: .gitignore  README.md  pyproject.toml
software/spectrometer/data/: 20230719-160040-Water_1H_andrew_probe_9us_pulse_25us_delay.fid  20230719-160148-Water_1H_18us_pulse_25us_delay.fid  20230820-141106-Water-1H-single_90_degree_pulse,length=9us,delay=30us_probe_holder_v1.fid  20230822-091753-Water-1H-single_90_degree_pulse,length=9us,delay=25us,record_length=10000,sample_rate=320000,probe=andrew.fid  20230822-123341-Water-1H-spin_echo,length=8us,delay_tau=100000us,record_length=20000.0,sample_rate=320000.0,probe=andrew.fid  20230825-142435-Water-1H-spin_echo,length=9us,delay_tau=100000us,record_length=130000.0,sample_rate=320000.0,probe=andrew.fid  20230828-161013-Toluene-1H-single_90_degree_pulse,length=9us,delay=25us,record_length=20000.0,sample_rate=320000.0,probe=andrew.fid  20230906-172617-Toluene-1H-single_90_degree_pulse,length=8us,delay=25us,record_length=15000.0,sample_rate=320000.0,probe=andrew.fid  20230910-094346-none-none-sample_signal_25MHz_10mVpp_30dB_attenuator,record_length=10000.0,sample_rate=320000.0.fid  20230910-095659-none-none-sample_signal_25MHz_10mVpp_50dB_attenuator,df=1ppm,record_length=10000.0,sample_rate=320000.0.fid  20230910-100255-none-none-sample_signal_25MHz_10mVpp_56dB_attenuator,df=1ppm,record_length=10000.0,sample_rate=320000.0.fid  toluene_simulation_25MHz_field_50Hz_linewidth.csv
software/spectrometer/data/20230820-171854-Water-1H-rabi-nutation/: 20230820-171853-Water-1H-one_of_repeated_90_degree_pulses,length=1.0us,delay=30us,repetition_time=5s.fid  20230820-171853-Water-1H-one_of_repeated_90_degree_pulses,length=1.332220367278798us,delay=30us,repetition_time=5s.fid  20230820-171853-Water-1H-one_of_repeated_90_degree_pulses,length=1.664440734557596us,delay=30us,repetition_time=5s.fid  20230820-171853-Water-1H-one_of_repeated_90_degree_pulses,length=1.996661101836394us,delay=30us,repetition_time=5s.fid  20230820-171853-Water-1H-one_of_repeated_90_degree_pulses,length=10.302170283806344us,delay=30us,repetition_time=5s.fid  20230820-171853-Water-1H-one_of_repeated_90_degree_pulses,length=10.634390651085141us,delay=30us,repetition_time=5s.fid  20230820-171853-Water-1H-one_of_repeated_90_degree_pulses,length=10.96661101836394us,delay=30us,repetition_time=5s.fid  20230820-171853-Water-1H-one_of_repeated_90_degree_pulses,length=11.298831385642739us,delay=30us,repetition_time=5s.fid  20230820-171853-Water-1H-one_of_repeated_90_degree_pulses,length=11.631051752921536us,delay=30us,repetition_time=5s.fid  20230820-171853-Water-1H-one_of_repeated_90_degree_pulses,length=11.963272120200333us,delay=30us,repetition_time=5s.fid  20230820-171853-Water-1H-one_of_repeated_90_degree_pulses,length=12.295492487479132us,delay=30us,repetition_time=5s.fid  20230820-171853-Water-1H-one_of_repeated_90_degree_pulses,length=12.627712854757931us,delay=30us,repetition_time=5s.fid  (+588 more)
software/spectrometer/docs/: api.md  conf.py  index.md  index.rst.bak
software/spectrometer/scripts/: demo.ipynb  full_demo.ipynb  process_fid.ipynb  process_fid_toluene.ipynb  process_rabi_nutation.ipynb  process_spin_echo.ipynb  process_t2_decay.ipynb  process_test_signal.ipynb  record_fid.py  record_rabi_nutation.py  record_spin_echo.py  record_t2_decay.py
software/spectrometer/spectrometer/: __init__.py  __main__.py  cli.py  data.py  plot.py  process.py  pulse.py
software/spectrometer/tests/: test_data.py
(+1145 files in other folders)
